# SWERVE-DRIVE

./: Earthfile
.github/workflows/: trigger.yml
swerve-drive-core/: CMakeLists.txt  package.xml
swerve-drive-core/include/swerve_drive_core/: SwerveDriveKinematics.hpp
swerve-drive-core/test/: 3_modules_test.cpp  4_modules_test.cpp
swervebot_bringup/: CMakeLists.txt  package.xml
swervebot_bringup/config/: swervebot_controllers.yaml
swervebot_bringup/launch/: swervebot.launch.py  swervebot.launch.xml  test_forward_position_controller.launch.py  test_forward_position_controller.launch.xml  test_joint_trajectory_controller.launch.py  test_joint_trajectory_controller.launch.xml
swervebot_controller/: CMakeLists.txt  package.xml  swervebot_controller.xml
swervebot_controller/include/swervebot_controller/: odometry.hpp  speed_limiter.hpp  swervebot_controller.hpp  validate_swervebot_controller_parameters.hpp  visibility_control.h
swervebot_controller/src/: odometry.cpp  speed_limiter.cpp  swervebot_controller.cpp  swervebot_controller.yaml
swervebot_controller/test/: swervebot_controller_params.yaml  swervebot_controller_preceeding_params.yaml  test_load_swervebot_controller.cpp  test_swervebot_controller.cpp  test_swervebot_controller.hpp  test_swervebot_controller_preceeding.cpp
swervebot_description/: CMakeLists.txt  README.md  package.xml
swervebot_description/launch/: view_swervebot.launch.py  view_swervebot.launch.xml
swervebot_description/meshes/swervebot/collision/: chasis.stl  wheel.stl  wheel_anchor.stl
swervebot_description/test/: swervebot_test_urdf_xacro.py
swervebot_description/urdf/: swervebot.urdf.xacro
swervebot_description/urdf/swervebot/: swervebot_macro.ros2_control.xacro  swervebot_macro.xacro
swervebot_simulation/swervebot_harmonic_bringup/: CMakeLists.txt  README.md  package.xml
swervebot_simulation/swervebot_harmonic_bringup/launch/: ignition.launch.py
swervebot_simulation/swervebot_simulation/: CMakeLists.txt  package.xml
